--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 *.sln.docstates
 LiteTorrent/Downloads/
 LiteTorrent/Torrents/
+LiteTorrent/cache
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
