--- a/LiteTorrent/LiteTorrent.csproj
+++ b/LiteTorrent/LiteTorrent.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.3.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="MonoTorrent" Version="3.0.2" />
   </ItemGroup>
